<resources xmlns:tools="http://schemas.android.com/tools">

    <string name="app_name" tools:override="true" translatable="false">10Sel</string>
    <string name="title_activity_registration_form">Register</string>

    <string name="title_activity_welcome">Home Screen</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">Got It!</string>

    <string name="slide_1_title">Peer-to-peer</string>
    <string name="slide_1_desc">The fastest way to auction, buy or sell amongst peers</string>

    <string name="slide_2_title">Connecting peers via trade</string>
    <string name="slide_2_desc">Exchange with peers around the globe. Trust us with the heavy lifting</string>

    <string name="slide_3_title">Making Awesome deals</string>
    <string name="slide_3_desc">Get the best deals ever in 10s! Only from your peers</string>

    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
    <string name="play_again">Play Again</string>

    <string name="terms">Terms and Conditions</string>

    <string name="slogan">Make an awesome deal in %d seconds</string>
    <string name="slogan_2">Inspiring your purchases to drive your sales</string>
    <string name="share">Share</string>
    <string name="chat">Chat</string>
    <string name="chat_hint">Chat with Author</string>
    <string name="like">Like post</string>
    <string name="share_hint">Share post</string>
    <string name="loading">Loading ...</string>
    <string name="playing">Now playing ...</string>
    <string name="pause">Paused</string>
    <string name="error_loading_video">Error loading video</string>
    <string name="retry_loading">Retrying ...</string>
    <string name="publish">Publish</string>
    <string name="cancel">Cancel</string>
    <string name="post_title_hint">Name|Title (*)</string>
    <string name="post_desc_hint">(*) What are you selling/auctioning? (Preferably start with the name)</string>
    <string name="publish_description">(*) fields are obligatory. Pick categories to improve item visibility</string>
    <string name="price_hint">Price (*)</string>
    <string name="location_hint">Location</string>
    <string name="message_sell">Have awesome stuff to sell? Sell your stuff in 10 seconds. It starts with this button!</string>
    <string name="search_hint">Quickly search for cool stuff</string>
    <string name="search">%s, quickly find stuff here</string>
    <string name="preparing">preparing </string>
    <string name="buying">Auctions</string>
    <string name="selling">Send</string>
    <string name="profile">Profile</string>
    <string name="username">\@ %s Username</string>
    <string name="chat_content_hint">chat</string>

    <string-array name="categories">
        <item>Phones</item>
        <item>Computers</item>
        <item>Books</item>
        <item>Android</item>
        <item>IOS</item>
        <item>Fashion | Clothing</item>
        <item>Chairs</item>
        <item>Beverages</item>
        <item>Drinks</item>
        <item>Modems</item>
        <item>Internet</item>
        <item>Suits</item>
        <item>TVs</item>
        <item>Consoles</item>
        <item>Games</item>
        <item>Cars</item>
        <item>Trucks</item>
        <item>Software</item>
        <item>Jewelry</item>
        <item>Shoes</item>
        <item>Art</item>
        <item>Sport</item>
    </string-array>

    <string name="timeinterval" formatted="false" translatable="false">%d %s</string>

    <string name="fb_login_protocol_scheme" translatable="false">fb1643272769025679</string>
    <string name="facebook_app_id" translatable="false">1643272769025679</string>
    <string name="login_error">Login error! %s</string>
    <string name="upload_error">Error uploading thumbnail. Please try again</string>
    <string name="publishing">Publishing, please wait</string>
    <string name="uploading_thumbs">Uploading thumbs</string>
    <string name="error_uploading">Error uploading</string>
    <string name="uploaded">Published</string>
    <string name="about">About</string>
    <string name="phone_contact">Phone Contact</string>
    <string name="email">Email</string>
    <string name="update_contact">Enter as international (+)</string>
    <string name="update">Update</string>
    <string name="update_location">Update location (City-Country)</string>
    <string name="update_status">Brief about yourself</string>
    <string name="author_name">Author name</string>
    <string name="obligatory_field">Message cannot be empty</string>
    <string name="reply">Reply</string>
    <string name="new_comments">%d comment(s)</string>
    <string name="new_posts">%d new updates</string>
    <string name="share_string" formatted="false">%s is selling awesome stuff on %s</string>
    <string name="call">call</string>
    <string name="call_author">Call Author</string>
    <string name="sms" translatable="false">SMS</string>
    <string name="sms_author">SMS Author</string>
    <string name="sms_message">Hello I wish to reach out to you about the stuff you posted on 10Sel</string>
    <string name="search_selling">%s, do you have any of these?</string>
    <string name="comment">Comment</string>
    <string name="pv_hint">Tap the author icon for private chat</string>
    <string name="err_empty">Field cannot be empty</string>
    <string name="pv">Private chat</string>
    <string name="sms_error">Unable to send SMS at the time.</string>
    <string name="call_error">Unable to place call at the moment</string>
    <string name="notify_item_sale">Receive notification on new posts</string>
    <string name="notify_comment">Notify me about deals i have participated in.</string>
    <string name="content" translatable="false">Content Data</string>
    <string name="title_selling">What do you want to export?</string>
    <string name="send">Post</string>
    <string name="desc_selling">Nicely describe what you are need.</string>
    <string name="success">Posted</string>
    <string name="no_data">No data available. Post an item using the button below</string>
    <string name="posted">Posted</string>
    <string name="address">City.Country</string>
    <string name="requests">Auctions</string>
    <string name="zero" translatable="false">0</string>
    <string name="buytime">Buy more posting time</string>
    <string name="get_image">Pick Image</string>
    <string name="uploading">uploading</string>
    <string name="delete">Delete</string>
    <string name="delete_post">If you are author of this post, you can delete it from the menu</string>
    <string name="intro_text1">Looking to make an awesome sale/auction. Here you come! In 10s the deal is done!</string>
    <string name="intro_title1">Need to sell/auction awesome stuff?</string>
    <string name="intro_title2">Buy awesome stuff!</string>
    <string name="intro_text2">Looking for awesome stuff to buy? Here they are!</string>
    <string name="intro_title3">Your great profile!</string>
    <string name="intro_text3">Let others know that they can indeed trust you! Complete your profile</string>
    <string name="connection_error">Connection error. Check your network connection</string>
    <string name="checkbox_auction_string">Is this an Auction? (If yes, select the duration in Hours)</string>
    <string name="empty_content">No Items available</string>
    <string name="empty_comments">No comments yet.</string>
    <string name="empty_chats">No chats.\n Messages to this chat are encrypted</string>

</resources>