<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_like"
        android:icon="@drawable/ic_like_inactive"
        app:showAsAction="ifRoom"
        android:title="@string/like" />
    <!--<item
        android:id="@+id/action_chat"
        android:icon="@drawable/ic_chat"
        app:showAsAction="always"
        android:title="@string/chat"
        android:titleCondensed="@string/chat_hint"/>-->
    <item
        android:id="@+id/action_share"
        android:icon="@drawable/ic_share"
        app:showAsAction="always"
        android:title="@string/share"
        android:titleCondensed="@string/share_hint"/>
    <item
        android:id="@+id/action_call"
        android:icon="@drawable/ic_call"
        android:title="@string/call_author"
        android:titleCondensed="@string/call"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_sms"
        android:icon="@drawable/ic_sms"
        android:title="@string/sms_author"
        android:titleCondensed="@string/sms"
        app:showAsAction="never" />
</menu>