<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="10dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/itemDescriptionTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="20sp"
        android:alpha="1"
        android:autoLink="all"
        android:clickable="true"
        android:textColorLink="@color/facebook_blue"
        android:textIsSelectable="true"
        android:hint="@string/content"
        android:transitionName="content_shared" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:background="#666666"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_10"
        android:orientation="horizontal"
        android:weightSum="2">

        <TextView
            android:id="@+id/authorNameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/normal_font"
            android:hint="@string/author_name"
            android:alpha="0.8"
            android:layout_weight="1"
            android:transitionName="author_shared"/>

        <TextView
            android:id="@+id/dateTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/normal_font"
            android:textAlignment="viewEnd"
            android:layout_gravity="end"
            android:hint="@string/timeinterval"
            android:alpha="0.8"
            android:layout_weight="1"
            android:transitionName="date_shared"/>

    </LinearLayout>

</LinearLayout>