<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:attribute="http://schemas.android.com/apk/res-auto"
    tools:context="com.app.android.tensel.fragments.ProfileFragment">

    <RelativeLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:elevation="20dp"
        android:background="@drawable/selling3"
        android:scaleType="centerCrop"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_margin="5dp">

        <android.support.v7.widget.CardView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_alignParentRight="true"
            android:layout_marginRight="20dp"
            android:layout_marginTop="80dp"
            android:elevation="10dp"
            attribute:cardBackgroundColor="@color/bg_screen1"
            attribute:cardCornerRadius="40dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/salesCreated"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/normal_font"
                    android:textStyle="bold"
                    android:layout_centerVertical="true"
                    android:layout_alignRight="@+id/textView3"
                    android:layout_alignEnd="@+id/textView3" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/salesCreated"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="-5dp"
                    android:text="Sales"
                    android:textColor="@android:color/white"
                    android:id="@+id/textView3" />
            </RelativeLayout>
        </android.support.v7.widget.CardView>

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/userPhoto"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="60dp"
            android:src="@drawable/profile"
            android:elevation="5dp"/>

        <TextView
            android:id="@+id/userName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/userPhoto"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:text="User Name"
            android:textSize="@dimen/normal_font"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/userCountryTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/userName"
            android:layout_centerHorizontal="true"
            android:text="Yaounde.Cameroon"
            android:typeface="monospace" />

        <android.support.v7.widget.CardView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="80dp"
            android:elevation="10dp"
            attribute:cardBackgroundColor="@color/bg_screen1"
            attribute:cardCornerRadius="40dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/requestsMade"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="20dp"
                    android:text="0"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/normal_font"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/requestsMade"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="-5dp"
                    android:text="Requests"
                    android:textColor="@android:color/white" />
            </RelativeLayout>
        </android.support.v7.widget.CardView>
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/container">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:elevation="5dp"
                android:layout_margin="8dp"
                attribute:cardCornerRadius="3dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <View
                        android:layout_width="5dp"
                        android:layout_height="match_parent"
                        android:background="@color/bg_screen2" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="10dp"
                        android:gravity="center_vertical"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="@dimen/normal_font"
                            android:text="@string/email"
                            android:textColor="#212121"/>

                        <TextView
                            android:id="@+id/emailTextView"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="#AA212121"
                            android:text="-"/>
                    </LinearLayout>
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:elevation="5dp"
                android:layout_margin="8dp"
                attribute:cardCornerRadius="3dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <View
                        android:layout_width="5dp"
                        android:layout_height="match_parent"
                        android:background="@color/bg_screen1" />

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="10dp"
                        android:layout_marginStart="10dp"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="@dimen/normal_font"
                            android:text="@string/phone_contact"
                            android:textColor="#212121"/>

                        <TextView
                            android:id="@+id/phoneTextView"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="#AA212121"
                            android:text="-"/>
                    </LinearLayout>
                    <ImageButton
                        android:id="@+id/buttonEditContact"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:background="@drawable/md_transparent"
                        android:src="@drawable/ic_edit"/>
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:elevation="5dp"
                android:layout_margin="8dp"
                attribute:cardCornerRadius="3dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <View
                        android:layout_width="5dp"
                        android:layout_height="match_parent"
                        android:background="@color/bg_screen2" />

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="10dp"
                        android:layout_marginStart="10dp"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="@dimen/normal_font"
                            android:text="@string/location_hint"
                            android:textColor="#212121"/>

                        <TextView
                            android:id="@+id/locationTextView"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="12sp"
                            android:textColor="#AA212121"
                            android:text="-"/>
                    </LinearLayout>
                    <ImageButton
                        android:id="@+id/buttonEditLocation"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:background="@drawable/md_transparent"
                        android:src="@drawable/ic_edit"/>
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:elevation="5dp"
                android:layout_margin="8dp"
                attribute:cardCornerRadius="3dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <View
                        android:layout_width="5dp"
                        android:layout_height="match_parent"
                        android:background="@color/bg_screen2" />

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="10dp"
                        android:layout_marginStart="10dp"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="@dimen/normal_font"
                            android:text="@string/about"
                            android:textColor="#212121"/>

                        <TextView
                            android:id="@+id/aboutTextView"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="12sp"
                            android:textColor="#AA212121"
                            android:text="-"/>
                    </LinearLayout>
                    <ImageButton
                        android:id="@+id/buttonEditStatus"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:background="@drawable/md_transparent"
                        android:src="@drawable/ic_edit"/>
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/buttonBuyTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/chip"
                android:layout_gravity="center_horizontal"
                android:drawableStart="@drawable/ic_attach_money"
                android:drawableLeft="@drawable/ic_attach_money"
                android:text="@string/buytime"/>

            <android.support.v7.widget.SwitchCompat
                android:id="@+id/itemNotificationSwitch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/notify_item_sale"
                android:textSize="12sp"
                android:background="@android:color/transparent"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.1dp"
                android:background="#666666"/>

            <android.support.v7.widget.SwitchCompat
                android:id="@+id/commentNotificationSwitch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/notify_comment"
                android:textSize="12sp"
                android:background="@android:color/transparent"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.1dp"
                android:background="#666666"/>


        </LinearLayout>
    </ScrollView>
</RelativeLayout>
